# const_poly

./: BENCHMARKS.md  CONTRIBUTIONS.md  Cargo.toml  LICENSE  README.md  TUTORIAL.md  build.rs
.github/workflows/: build-tests.yml  code-coverage.yml
src/: function_approximations.rs  function_approximations_tests.rs  lib.rs  macros.rs  polynomial.rs  term.rs
src/const_poly/: function_approximations.rs  mod.rs  polynomial.rs  term.rs  test.rs
tests/: benchmarking_tests.rs  function_approximations_tests.rs  polynomial_tests.rs
